@@ -1025,6 +1025,22 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon BJC i990 */
+    "i990", 3,
+    842, INCH(17),
+    10, 10, 9, 15,
+    &canon_MULTIPASS_MP900_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_px|CANON_CAP_rr|CANON_CAP_I|CANON_CAP_P|CANON_CAP_M|CANON_CAP_BORDERLESS,0,/* ESC (M 0x0 0x0 0x0 */
+    3,2, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_iP2700,
+    &canon_BJC_i990_modelist,
+    &canon_BJC_i560_paperlist,
+    &canon_BJC_i990_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon BJC i6100 */
     "i6100", 3,
     842, INCH(17),
